--- a/techpoly-shop/src/main/resources/application.properties
+++ b/techpoly-shop/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.servlet.multipart.max-request-size = 20MB
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=project1.pd05200@gmail.com
-spring.mail.password=fqhjwrlpwifszhjf
+spring.mail.password=pass
 spring.mail.properties.mail.smpt.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
